@@ -59,6 +59,7 @@ sub ircd_ns_main {
 		module_void("nickserv/main");
 	} else {
 		my $modes = '+io';
+                if (defined $Chakora::PROTO_SETTINGS{deaf} and !config('services', 'use_fantasy')) { $modes .= $Chakora::PROTO_SETTINGS{deaf}; }
 		if (defined $Chakora::PROTO_SETTINGS{god}) { $modes .= $Chakora::PROTO_SETTINGS{god}; }
 		serv_add(
 			'nickserv',
